<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ぴったんカメラ</string>
    <string name="action_settings">Settings</string>
    <string name="shutter">シャッター</string>
    <string name="watermark">透かし</string>
    <string name="switchCamera">カメラ切り替え</string>
    <string name="options">設定</string>
    <string name="scaleOfWatermark">透かしの拡大率</string>
    <string name="opacityOfWatermark">透かしの不透明度</string>
    <string name="minusButton">－</string>
    <string name="plusButton">＋</string>
    <string name="closeButton">Close</string>
    <string name="firstTuningAlertTitle">最初の調整をお願いします</string>
    <string name="firstTuningAlertMessage">透かしのサイズをお使いの端末に合わせるため、調整モードを起動します。</string>
    <string name="tuningModeTitle">調整モード</string>
    <string name="tuningModeMessage1">調整のため、写真を一枚撮ってください。形のはっきりしたものが望ましいです。</string>
    <string name="tuningModeMessage2">２つの像がなるべく合うように下のレバーとボタンで調整してください。</string>
    <string name="tuningModeMessage3">次は前面のカメラで写真を一枚撮ってください。</string>
    <string name="tuningQuitAlertTitle">調整モード終了</string>
    <string name="tuningQuitAlertMessage">調整モードを終了します。「設定」→「調整モードを起動」から再び調整することができます。</string>
    <string name="tuningOKButton">OK</string>
    <string name="tuningQuitQuestionTitle">調整モード終了の確認</string>
    <string name="tuningQuitQuestionMessage">調整モードを終了してもよろしいですか？</string>
    <string name="autoRefreshAlertTitle">透かし自動更新</string>
    <string name="autoRefreshAlertMessageOn">自動更新をオンにしました。\n写真を撮ると、透かしがその写真に変更されます。</string>
    <string name="autoRefreshAlertMessageOff">自動更新をオフにしました。\n写真を撮っても、透かす画像は変更されません。</string>
    <string name="toastSavedAs"> に保存しました</string>
    <string name="toastException">例外が発生しました</string>
    <string name="commentShutter">撮影する</string>
    <string name="commentWatermark">透かしの差し替え</string>
    <string name="commentSwitch">カメラ切り替え</string>
    <string name="commentOptions">設定</string>
    <string name="commentScale">透かしの拡大率設定</string>
    <string name="commentOpacity">透かしの不透明度設定</string>
    <string name="commentBlinking">透かしの点滅</string>
    <string name="commentAutoRefresh">透かしの自動更新</string>
    <string name="commentTuning">調整モード開始</string>
</resources>
